--- a/src/css/main.less
+++ b/src/css/main.less
@@ -91,7 +91,65 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+    clear: both;
+    width: 60%;
+    margin: 0 auto;
 }
+
+@font-face {
+  font-family: 'fontello';
+  src: url('@{static}font/fontello.eot?9140942');
+  src: url('@{static}font/fontello.eot?9140942#iefix') format('embedded-opentype'),
+       url('@{static}font/fontello.woff?9140942') format('woff'),
+       url('@{static}font/fontello.ttf?9140942') format('truetype'),
+       url('@{static}font/fontello.svg?9140942#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?9140942#fontello') format('svg');
+  }
+}
+*/
+
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+
+.icon-github-circled:before { content: '\e802'; } /* '' */
+.icon-twitter:before { content: '\e801'; } /* '' */
 
 .navbar-default {
     background-color: @primaryColor;
@@ -159,6 +217,14 @@ i {
     }
 }
 
+.keynotes {
+  h2 {
+    text-align: center;
+  }
+  .speaker-rounded {
+    margin: 0;
+  }
+}
 .speakers {
     // background-color: lighten(@secondaryColor, 30);
     background-color: darken(#FFF, 10);
@@ -167,8 +233,8 @@ i {
     margin-top: 25px;
 }
 .speaker-rounded {
-  width: 255px;
-  height: 255px;
+  width: 235px;
+  height: 235px;
   margin: 0 auto;
   border: 1px solid #CCC;
   border-radius: 50%;
@@ -181,17 +247,18 @@ i {
     box-shadow: inset 0 0 0 130px rgba(52, 152, 219, .7);
     .speaker-networks {
       opacity: 1;
-      -webkit-transform: scale(1);
-      -moz-transform: scale(1);
-      -o-transform: scale(1);
-      -ms-transform: scale(1);
-      transform: scale(1);
+      // -webkit-transform: scale(1);
+      // -moz-transform: scale(1);
+      // -o-transform: scale(1);
+      // -ms-transform: scale(1);
+      // transform: scale(1);
     }
   }
-  &.david { background: url('@{static}images/david.jpg'); }
-  &.medina { background: url('@{static}images/medina.jpg'); }
-  &.tupy { background: url('@{static}images/tupy.jpg'); }
-  // &.emerson { background: url('@{static}images/emerson.jpg'); }
+  background-position: center center;
+  &.david { background-image: url('@{static}images/david.jpg'); }
+  &.medina { background-image: url('@{static}images/medina.jpg'); }
+  &.tupy { background-image: url('@{static}images/tupy.jpg'); }
+  &.marcel { background-image: url('@{static}images/marcel.jpg'); }
 }
 .speaker-networks {
   width: 100%;
@@ -205,10 +272,26 @@ i {
   -o-transition: all 0.3s ease-in-out;
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -o-transform: scale(0);
-  -ms-transform: scale(0);
-  transform: scale(0);
+  // -webkit-transform: scale(0);
+  // -moz-transform: scale(0);
+  // -o-transform: scale(0);
+  // -ms-transform: scale(0);
+  // transform: scale(0);
   -webkit-backface-visibility: hidden;
+  i {
+    height: 28px;
+    float: none;
+    display: inline-block;
+    margin: 0;
+    font-size: 36px;
+    color: #FFF;
+    -webkit-transition: color 0.3s ease-in-out;
+    -moz-transition: color 0.3s ease-in-out;
+    -o-transition: color 0.3s ease-in-out;
+    -ms-transition: color 0.3s ease-in-out;
+    transition: color 0.3s ease-in-out;
+    &:hover {
+      color: @primaryColor;
+    }
+  }
 }
