--- a/src/css/main.less
+++ b/src/css/main.less
@@ -224,6 +224,12 @@ i {
     }
 }
 
+.event-date {
+  font-size: 36px;
+  font-weight: bold;
+  margin-top: 20px;
+  color: #444;
+}
 .keynotes {
   h2 {
     text-align: center;
