--- a/src/css/main.less
+++ b/src/css/main.less
@@ -208,11 +208,9 @@ i {
 
 /* HeaderWrap */
 #headerwrap {
-    /* background: url(../img/bg01.jpg) no-repeat center top; */
     background-color: @primaryColor;
     margin-top: -20px;
-    padding-top: 140px;
-    min-height: 650px;
+    padding: 140px 0 25px;
 
     h1 {
         margin-top: 60px;
@@ -222,6 +220,12 @@ i {
         font-weight: 300;
         letter-spacing: 1px;
     }
+}
+
+.headline {
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
 }
 
 .event-date {
@@ -307,4 +311,11 @@ i {
       color: @primaryColor;
     }
   }
+}
+.sponsors-wrap {
+  background-color: #fff;
+  padding: 30px 0 70px;
+}
+.jusbrasil-logo img, .evolux-logo img {
+  margin-top: 20px;
 }
