Improvements in the URL's hashes

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -319,3 +319,9 @@ i {
 .jusbrasil-logo img, .evolux-logo img {
   margin-top: 20px;
 }
+.bottom-note {
+  padding-top: 10px;
+  p {
+    font-size: 12px;
+  }
+}
