--- a/src/css/main.less
+++ b/src/css/main.less
@@ -316,6 +316,10 @@ i {
   background-color: #fff;
   padding: 30px 0 70px;
 }
+.event-wrap {
+  background-color: #fff;
+  padding-bottom: 20px;
+}
 .jusbrasil-logo img, .evolux-logo img {
   margin-top: 20px;
 }
