Improvements on footer

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -368,9 +368,13 @@ i {
     margin-right: 0;
   }
 }
-.bottom-note {
+.footer-wrap {
   padding-top: 10px;
+  background-color: @secondaryColor;
   p {
-    font-size: 12px;
+    font-size: 13px;
+    font-weight: 500;
+    color: #FFF;
   }
 }
+
