--- a/src/css/main.less
+++ b/src/css/main.less
@@ -313,6 +313,19 @@ i {
     }
   }
 }
+
+.subscribe-wrap {
+  background-color: #555;
+  h2 {
+    color: white;
+  }
+  iframe {
+    border: 9px solid white;
+    background-color: white;
+    margin: 30px 0;
+  }
+}
+
 .sponsors-wrap {
   background-color: #fff;
   padding: 30px 0 70px;
