--- a/src/css/main.less
+++ b/src/css/main.less
@@ -367,7 +367,7 @@ i {
 .event-wrap {
   background-color: #0F326C;
   background-image: url('@{static}images/salvador-bg.jpg');
-  background-position: 0 0;
+  background-position: 0 -341px;
   padding-bottom: 70px;
   min-height: 600px;
 }
