--- a/src/css/main.less
+++ b/src/css/main.less
@@ -316,13 +316,15 @@ i {
 
 .subscribe-wrap {
   background-color: #555;
+  color: white;
+  font-weight: normal;
   h2 {
     color: white;
   }
   iframe {
     border: 9px solid white;
     background-color: white;
-    margin: 30px 0;
+    margin-top: 30px;
   }
 }
 
