Fixes CSS of hover/active menu

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -164,8 +164,9 @@ hr {
     margin-top: 8px;
     > li > a {
       color: #222;
+      font-weight: 500;
       &.active, &:hover {
-        font-weight: bold;
+        color: #FFF;
       }
     }
   }
