Add initial Hotels page

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -394,3 +394,18 @@ i {
   }
 }
 
+.hotels {
+  background-color: white;
+  margin-top: 50px;
+  h1 {
+    color: #444;
+  }
+  article > p {
+    margin-bottom: 20px;
+  }
+
+  .thumb {
+    float: right;
+    margin: 0 0 18px 18px;
+  }
+}
