Insert Web Hotel in hotels page

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -403,7 +403,9 @@ i {
   article > p {
     margin-bottom: 20px;
   }
-
+  hr {
+    margin: 70px auto;
+  }
   .thumb {
     float: right;
     margin: 0 0 18px 18px;
