Add cover for hotels

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -403,11 +403,29 @@ i {
   article > p {
     margin-bottom: 20px;
   }
-  hr {
-    margin: 70px auto;
-  }
   .thumb {
     float: right;
     margin: 0 0 18px 18px;
   }
+  .cover {
+    color: white;
+    height: 120px;
+    text-align: center;
+    padding-top: 35px;
+    text-shadow: 1px 1px 4px #000;
+    font-size: 64px;
+    margin: 20px 0;
+    font-family: 'Lato',sans-serif;
+    font-weight: 500;
+    &.matiz {
+      background: url(../images/matiz-bg.jpg);
+      background-position: 0 -260px;
+    }
+    &.webhotel {
+      background: url(../images/webhotel-bg.jpg);
+      background-position: 0 -240px;
+    }
+  }
 }
+
+
