Add Tulip Inn Hotel

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -426,6 +426,10 @@ i {
       background: url(../images/webhotel-bg.jpg);
       background-position: 0 -240px;
     }
+    &.tulipinn {
+      background: url(../images/tulipinn-bg.jpg);
+      background-position: 0 -172px;
+    }
   }
 }
 
