Add Mercure Boulevard hotel

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -430,6 +430,10 @@ i {
       background: url(../images/tulipinn-bg.jpg);
       background-position: 0 -172px;
     }
+    &.boulevard {
+      background: url(../images/boulevard-bg.jpg);
+      background-position: 0 -200px;
+    }
   }
 }
 
