Add cover to `Python para Zumbis` minicourse

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -437,4 +437,54 @@ i {
   }
 }
 
-
+.pyzumbi-wrap {
+  color: #FFF;
+  background-color: #702b30;
+  padding-bottom: 0;
+  h2 {
+    color: #FFF;
+    text-align: center;
+  }
+}
+.pyzumbi-bg {
+  background: url(../images/py-zumbi.jpg) no-repeat center top #742A2C;
+  padding-bottom: 60px;
+}
+.minicourse-content {
+  margin-top: 400px;
+}
+.minicourse-video, .minicourse-info {
+  border: 9px solid #FFF;
+  height: 335px;
+}
+.minicourse-video {
+  float: left;
+  background-color: #FFF;
+}
+.minicourse-info {
+  float: right;
+  width: 498px;
+  padding: 6px;
+  color: #555;
+  background-color: #f0f0f0;
+}
+.minicourse-speaker {
+  font-weight: bold;
+  font-size: 17px;
+  color: #532613;
+  margin-bottom: 0;
+}
+.minicourse-about {
+  float: right;
+}
+.minicourse-date, .learn-it {
+  font-size: 22px;
+}
+.minicourse-date {
+  font-weight: 500;
+}
+.learn-it {
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
