Adds location cover

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -477,14 +477,49 @@ i {
 .minicourse-about {
   float: right;
 }
-.minicourse-date, .learn-it {
+.learn-it {
   font-size: 22px;
-}
-.minicourse-date {
-  font-weight: 500;
 }
 .learn-it {
   font-size: 22px;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 25px;
+}
+
+.local h2 {
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  color: #333;
+  text-shadow: 0 0 3px #FFF;
+  font-weight: 800;
+  margin-top: 40px;
+}
+.local-wrap {
+  background-color: #f0f0f0;
+  padding: 0;
+}
+.local-pic {
+  border: 9px solid #FFF;
+  background: url(../images/casa-comercio.jpg) no-repeat;
+  width: 500px;
+  height: 375px;
+  float: left;
+  position: absolute;
+  z-index: 100;
+  right: 0;
+  top: 130px;
+}
+.gmap {
+  height: 700px;
+}
+.local-info {
+  font-weight: bold;
+}
+.local-name {
+  font-size: 20px;
+  background: rgba(0, 0, 0, 0.5);
+  color: #FFF;
+  padding: 10px 15px;
+  font-weight: 500;
 }
