Adds event schedule

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -523,3 +523,32 @@ i {
   padding: 10px 15px;
   font-weight: 500;
 }
+
+.schedule-wrap {
+  h2 {
+    text-align: center;
+  }
+}
+.daily-schedule {
+  margin-top: 30px;
+  thead {
+    background: #BBB;
+    color: #FFF;
+    th {
+      border-bottom: 0 !important;
+    }
+  }
+}
+.time-column {
+  padding-left: 15px;
+}
+.schedule-time {
+  width: 60px;
+}
+.schedule-speaker {
+  width: 13.5%;
+}
+.keynote-item {
+  color: @secondaryColor;
+  font-weight: bold;
+}
