Changed event location

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -501,7 +501,7 @@ i {
 }
 .local-pic {
   border: 9px solid #FFF;
-  background: url(../images/casa-comercio.jpg) no-repeat;
+  background: url(../images/mundo-plaza.jpg) no-repeat;
   width: 500px;
   height: 375px;
   float: left;
